# aasdk-ui

./: .gitignore  Cargo.toml  cert.pem  example.cnf  example.crt  example.key  fake_ca.crt  fake_ca.key  fake_ca.srl  fake_ca_key.pem  fake_client.crt  fake_client.csr  fake_client.key  install.sh  key.pem  make_certs.sh  v3.ext
android-auto-0.1.0/: .cargo_vcs_info.json  Cargo.toml
android-auto-0.2.0/: .cargo_vcs_info.json  Cargo.toml
android-auto-0.3.3/: .cargo_vcs_info.json  Cargo.toml
android-auto-0.3.5/: Cargo.toml
android-auto-0.3.5/src/: lib.rs  mediastatus.rs
android-auto-patched/: .cargo_vcs_info.json
public/: app.js  index.html  style.css
src/: main.rs
