[package]
name = "aasdk-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
android-auto = { version = "0.3.3", features = ["usb"] }
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
futures = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.6.0"
