[package]
name = "aasdk-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
android-auto = { path = "./android-auto-0.3.5", features = ["usb"] }
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
futures = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bytes = "1.6.0"
async-trait = "0.1.88"
base64 = "0.22.1"

# =====================================================================
# CRITICAL: This patch replaces the default rustls-webpki with a fork
# that supports X.509 v1 certificates used by by the Android Auto
# protocol (the default Google Automotive Link CA is a v1 cert from 2014).
# Without this, rustls panics with UnsupportedCertVersion before the
# TLS handshake can even begin. See: uglyoldbob/android-auto Cargo.toml
# =====================================================================
[patch.crates-io]
rustls-webpki = { git = "https://github.com/uglyoldbob/webpki", branch = "main5" }
